tests/js_error/source_locations/class/new_class.exp
TypeError: super class must be a constructor
  at <global> (tests/js_error/source_locations/class/new_class.js:1:2)
