tests/js_error/source_locations/class/new_class.js
(class C extends 1 {})